force-app/main/default/objects/Formulario_de_gestion__c/Formulario_de_gestion__c.object-meta.xml
<CustomObject>
    <label>Formulario de gestion</label>
    <nameField>
        <label>Nombre de Formulario de gestion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formularios de gestion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>