force-app/main/default/objects/Formulario_de_gestion__c/fields/Caso_gestion__c.field-meta.xml
<CustomField>
    <fullName>Caso_gestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Formularios de gestion</relationshipLabel>
    <relationshipName>Formularios_de_gestion1</relationshipName>
    <type>Lookup</type>
</CustomField>