force-app/main/default/objects/Formulario_de_gestion__c/fields/Cuenta_con_stock_actualmente__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_con_stock_actualmente__c</fullName>
    <label>¿Cuenta con stock actualmente?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>