force-app/main/default/objects/Formulario_de_gestion__c/fields/Motivo_de_la_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Motivo_de_la_solicitud__c</fullName>
    <label>Motivo de la solicitud</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OS demora aprobacion</fullName>
            </value>
            <value>
                <fullName>Producto en quiebre</fullName>
            </value>
            <value>
                <fullName>OS no consigue stock</fullName>
            </value>
            <value>
                <fullName>Cobertura negativa</fullName>
            </value>
            <value>
                <fullName>Solicitada por profesional</fullName>
            </value>
            <value>
                <fullName>Demora en distribucion a farmacia</fullName>
            </value>
            <value>
                <fullName>Presentacion tardia en OS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>