force-app/main/default/objects/Formulario_de_gestion__c/fields/Nro_de_tramite__c.field-meta.xml
<CustomField>
    <fullName>Nro_de_tramite__c</fullName>
    <label>Nro de tramite</label>
    <type>TextArea</type>
</CustomField>