force-app/main/default/objects/Formulario_de_gestion__c/fields/Obra_Social_Formulario_Gestion__c.field-meta.xml
<CustomField>
    <fullName>Obra_Social_Formulario_Gestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Obra Social</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Obra social</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Formularios de gestion</relationshipLabel>
    <relationshipName>Formularios_de_gestion</relationshipName>
    <type>Lookup</type>
</CustomField>