force-app/main/default/objects/Formulario_de_gestion__c/fields/Profesional_formulario_gestion__c.field-meta.xml
<CustomField>
    <fullName>Profesional_formulario_gestion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profesional</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Formularios de gestion (Profesional)</relationshipLabel>
    <relationshipName>Formularios_de_gestion1</relationshipName>
    <type>Lookup</type>
</CustomField>